--- a/ui/package.json
+++ b/ui/package.json
@@ -20,6 +20,7 @@
     "apollo-link": "^1.2.3",
     "apollo-link-http": "^1.5.5",
     "axios": "^0.18.0",
+    "bulma": "^0.7.2",
     "filesaver.js": "^1.3.4",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
