--- a/ui/package.json
+++ b/ui/package.json
@@ -29,6 +29,7 @@
     "uniqid": "^5.0.3",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.25",
+    "vue-cookie": "^1.1.4",
     "vue-pose": "^0.5.0",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
