--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
+    "graphql-subscriptions": "^1.0.0",
     "graphql-tools": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
@@ -37,6 +38,7 @@
     "npm": "^6.4.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
+    "subscriptions-transport-ws": "^0.9.15",
     "ts-node": "^7.0.1",
     "winston": "^3.1.0"
   },
