--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "@types/node": "^10.11.4",
     "@types/redis": "^2.8.6",
     "@types/winston": "^2.4.4",
+    "apollo-server": "^2.1.0",
+    "apollo-server-express": "^2.1.0",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.4.0",
@@ -29,7 +31,6 @@
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
     "graphql": "^14.0.2",
-    "graphql-subscriptions": "^1.0.0",
     "graphql-tools": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
