--- a/ui/package.json
+++ b/ui/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/file-saver": "^1.3.1",
     "@types/luxon": "^1.4.0",
+    "@types/pretty-bytes": "^5.1.0",
     "@types/uniqid": "^4.1.2",
     "@types/vue": "^2.0.0",
     "@types/webfontloader": "^1.6.29",
@@ -19,13 +20,17 @@
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
     "apollo-link-http": "^1.5.5",
+    "apollo-link-ws": "^1.0.9",
+    "apollo-utilities": "^1.0.24",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
     "filesaver.js": "^1.3.4",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
     "luxon": "^1.4.3",
+    "pretty-bytes": "^5.1.0",
     "register-service-worker": "^1.0.0",
+    "subscriptions-transport-ws": "^0.9.15",
     "uniqid": "^5.0.3",
     "vue": "^2.5.17",
     "vue-apollo": "^3.0.0-beta.25",
