--- a/ui/package.json
+++ b/ui/package.json
@@ -9,6 +9,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/file-saver": "^1.3.1",
     "@types/luxon": "^1.4.0",
     "@types/pretty-bytes": "^5.1.0",
@@ -24,6 +25,7 @@
     "apollo-utilities": "^1.0.24",
     "axios": "^0.18.0",
     "bulma": "^0.7.2",
+    "dotenv": "^6.1.0",
     "filesaver.js": "^1.3.4",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
