--- a/netlify.toml
+++ b/netlify.toml
@@ -24,36 +24,37 @@ ID = "boxy-app"
 # deploy settings will inherit these settings.
 [context.production]
   publish = "output/"
-  command = "make publish"
-  environment = { ACCESS_TOKEN = "super secret", NODE_ENV = "8.0.1" }
+  command = "yarn build"
+  environment = { VUE_APP_API_SERVER= "http://localhost:4000", VUE_APP_WS_API_SERVER= "ws://localhost:4000" }
 
 # Deploy Preview context: all deploys resulting from a pull/merge request will 
 # inherit these settings.
 [context.deploy-preview]
   publish = "dist/"
+  environment = { VUE_APP_API_SERVER= "http://localhost:4000", VUE_APP_WS_API_SERVER= "ws://localhost:4000" }
 
 # Here is another way to define context specific environment variables.
-[context.deploy-preview.environment]
-  ACCESS_TOKEN = "not so secret"
+# [context.deploy-preview.environment]
+#   ACCESS_TOKEN = "not so secret"
 
 # Branch Deploy context: all deploys that are not from a pull/merge request or 
 # from the Production branch will inherit these settings.
-[context.branch-deploy]
-  command = "echo branch"
-[context.branch-deploy.environment]
-  NODE_ENV = "development"
+# [context.branch-deploy]
+#   command = "echo branch"
+# [context.branch-deploy.environment]
+#   NODE_ENV = "development"
 
 # Specific branch context: all deploys from this specific branch will inherit
 # these settings.
-[context.staging] # 'staging' is a branch name
-  command = "echo 'staging'"
-  base = "staging"
+# [context.staging] # 'staging' is a branch name
+#   command = "echo 'staging'"
+#   base = "staging"
 
 # For contexts of branches with special characters, enclose the branch name 
 # with quotes.
-[context."feat/branch"]
-  command = "echo 'special branch'"
-  base = "branch"
+# [context."feat/branch"]
+#   command = "echo 'special branch'"
+#   base = "branch"
 
 # Redirects and headers are GLOBAL for all builds – they do not get scoped to 
 # contexts no matter where you define them in the file.
