--- a/ui/.env.production
+++ b/ui/.env.production
@@ -1,3 +1,3 @@
-VUE_APP_API_SERVER= https://boxy-server.herokuapp.com/
+VUE_APP_API_SERVER= https://boxy-server.herokuapp.com
 
-VUE_APP_WS_API_SERVER= ws://boxy-server.herokuapp.com/
+VUE_APP_WS_API_SERVER= ws://boxy-server.herokuapp.com
