adding console logs for heroku debugging

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -27,6 +27,16 @@
       "args": [
         "${workspaceRoot}/server/src/app.ts"
       ],
+    },
+    {
+      "type": "node",
+      "request": "attach",
+      "name": "Heroku",
+      "address": "localhost",
+      "port": 9229,
+      "protocol": "inspector",
+      "localRoot": "${workspaceFolder}/server/",
+      "remoteRoot": "/app"
     }
   ]
 }
