--- a/netlify.toml
+++ b/netlify.toml
@@ -62,14 +62,14 @@ ID = "boxy-app"
 # PER-DEPLOY.
 
 # A basic redirect rule
-[[redirects]]
-  from = "/*"
-  to = "/blog/:splat"
+# [[redirects]]
+#   from = "/*"
+#   to = "/blog/:splat"
 
 # A redirect rule with all the supported properties
-[[redirects]]
-  from = "/old-path"
-  to = "/new-path"
+# [[redirects]]
+#   from = "/old-path"
+#   to = "/new-path"
 
   # The default HTTP status code is 301, but you can define a different one.
   status = 302
@@ -97,10 +97,10 @@ ID = "boxy-app"
 
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+# [[redirects]]
+#   from = "/*"
+#   to = "/index.html"
+#   status = 200
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
