--- a/netlify.toml
+++ b/netlify.toml
@@ -67,33 +67,33 @@ ID = "boxy-app"
 #   to = "/blog/:splat"
 
 # A redirect rule with all the supported properties
-# [[redirects]]
-#   from = "/old-path"
-#   to = "/new-path"
+[[redirects]]
+  # from = "/old-path"
+  # to = "/new-path"
 
   # The default HTTP status code is 301, but you can define a different one.
-  status = 302
+  # status = 302
 
   # By default, redirects won't be applied if there's a file with the same 
   # path as the one defined in the `from` property. Setting `force` to `true` 
   # will make the redirect rule take precedence over any existing files.
-  force = true
+  # force = true
 
   # Redirect from /old-path?id=123 to /new-path. Each combination of query 
   # params needs to be defined in a separate [[redirects]] block. 
   # More information at https://www.netlify.com/docs/redirects/#query-params
-  query = {id = ":id"}
+  # query = {id = ":id"}
 
   # Redirect based on browser language, geolocation, and/or identity role.
-  conditions = {Language = ["en"], Country = ["US"], Role = ["admin"]}
+  # conditions = {Language = ["en"], Country = ["US"], Role = ["admin"]}
 
   # Sign each request with a value defined in an environment variable
-  signed = "API_SIGNATURE_TOKEN"
+  # signed = "API_SIGNATURE_TOKEN"
 
   # You can also define custom headers within your redirects blocks.
-  [redirects.headers]
-    X-From = "Netlify"
-    X-Api-Key = "some-api-key-string"
+  # [redirects.headers]
+    # X-From = "Netlify"
+    # X-Api-Key = "some-api-key-string"
 
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
