added redirect config in toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -97,10 +97,11 @@ ID = "boxy-app"
 
 # The following redirect is intended for use with most SPAs that handle
 # routing internally.
-# [[redirects]]
-#   from = "/*"
-#   to = "/index.html"
-#   status = 200
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+  force = true
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
