fixed toml file

--- a/netlify.toml
+++ b/netlify.toml
@@ -101,7 +101,12 @@ ID = "boxy-app"
   from = "/*"
   to = "/index.html"
   status = 200
-  force = true
+  # force = true
+
+[[redirects]]
+  from = "/service-worker.js"
+  to = "/service-worker.js"
+  status = 200
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
