removed procfile and exec post install step

--- a/server/package.json
+++ b/server/package.json
@@ -46,7 +46,8 @@
   },
   "scripts": {
     "dev": "nodemon ./src/app.ts",
-    "start": "ts-node ./src/app.ts"
+    "start": "ts-node ./src/app.ts",
+    "postinstall": "cd ./src && mkdir uploads"
   },
   "devDependencies": {
     "nodemon": "^1.18.4",
