--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
+    "@types/newrelic": "^3.4.0",
     "@types/node": "^10.11.4",
     "@types/redis": "^2.8.6",
     "@types/winston": "^2.4.4",
@@ -36,13 +37,14 @@
     "morgan": "^1.9.1",
     "multer": "^1.4.0",
     "mysql": "^2.16.0",
+    "newrelic": "^4.9.0",
     "npm": "^6.4.1",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "subscriptions-transport-ws": "^0.9.15",
     "ts-node": "^7.0.1",
-    "winston": "^3.1.0",
-    "typescript": "^3.1.1"
+    "typescript": "^3.1.1",
+    "winston": "^3.1.0"
   },
   "scripts": {
     "dev": "nodemon ./src/app.ts",
