--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "@types/dotenv": "^4.0.3",
     "@types/express-graphql": "^0.6.1",
     "@types/express-session": "^1.15.11",
+    "@types/graceful-fs": "^4.1.2",
     "@types/graphql": "^14.0.1",
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/morgan": "^1.7.35",
@@ -31,13 +32,14 @@
     "express": "^4.16.3",
     "express-graphql": "^0.6.12",
     "express-session": "^1.15.6",
+    "graceful-fs": "^4.1.11",
     "graphql": "^14.0.2",
     "graphql-tools": "^4.0.0",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.0",
     "mysql": "^2.16.0",
-    "newrelic": "^4.9.0",
+    "newrelic": "^4.10.0",
     "npm": "^6.4.1",
     "pm2": "^3.2.2",
     "redis": "^2.8.0",
