--- a/server/package.json
+++ b/server/package.json
@@ -42,6 +42,7 @@
     "newrelic": "^4.10.0",
     "npm": "^6.4.1",
     "pm2": "^3.2.2",
+    "progress-stream": "^2.0.0",
     "redis": "^2.8.0",
     "reflect-metadata": "^0.1.12",
     "subscriptions-transport-ws": "^0.9.15",
