--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
     "@types/body-parser": "^1.17.0",
     "@types/connect-redis": "^0.0.7",
     "@types/cors": "^2.8.4",
-    "@types/dotenv": "^4.0.3",
+    "@types/dotenv": "^6.1.0",
     "@types/express-graphql": "^0.6.1",
     "@types/express-session": "^1.15.11",
     "@types/graceful-fs": "^4.1.2",
@@ -18,28 +18,28 @@
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
     "@types/newrelic": "^3.4.0",
-    "@types/node": "^10.11.4",
-    "@types/redis": "^2.8.6",
+    "@types/node": "^10.12.10",
+    "@types/redis": "2.8.6",
     "@types/winston": "^2.4.4",
-    "apollo-server": "^2.1.0",
-    "apollo-server-express": "^2.1.0",
+    "apollo-server": "^2.2.2",
+    "apollo-server-express": "^2.2.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "connect-redis": "^3.4.0",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^6.1.0",
-    "dropbox": "^4.0.9",
+    "dropbox": "^4.0.13",
     "express": "^4.16.3",
-    "express-graphql": "^0.6.12",
+    "express-graphql": "^0.7.1",
     "express-session": "^1.15.6",
-    "graceful-fs": "^4.1.11",
+    "graceful-fs": "^4.1.15",
     "graphql": "^14.0.2",
-    "graphql-tools": "^4.0.0",
+    "graphql-tools": "^4.0.3",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.9.1",
     "multer": "^1.4.0",
     "mysql": "^2.16.0",
-    "newrelic": "^4.10.0",
+    "newrelic": "^4.11.0",
     "npm": "^6.4.1",
     "pm2": "^3.2.2",
     "progress-stream": "^2.0.0",
@@ -47,7 +47,7 @@
     "reflect-metadata": "^0.1.12",
     "subscriptions-transport-ws": "^0.9.15",
     "ts-node": "^7.0.1",
-    "typescript": "^3.1.1",
+    "typescript": "^3.1.6",
     "winston": "^3.1.0"
   },
   "scripts": {
@@ -56,8 +56,8 @@
     "postinstall": "mkdir uploads"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4",
-    "prettier": "^1.14.3",
+    "nodemon": "^1.18.6",
+    "prettier": "^1.15.2",
     "prettierrc": "^0.0.0-5",
     "source-map-support": "^0.5.9"
   }
