--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/body-parser": "^1.17.0",
-    "@types/connect-redis": "^0.0.7",
+    "@types/connect-redis": "0.0.8",
     "@types/cors": "^2.8.4",
     "@types/dotenv": "^6.1.0",
     "@types/express-graphql": "^0.6.1",
@@ -17,9 +17,9 @@
     "@types/isomorphic-fetch": "^0.0.34",
     "@types/morgan": "^1.7.35",
     "@types/multer": "^1.3.7",
-    "@types/newrelic": "^3.4.0",
+    "@types/newrelic": "^4.11.0",
     "@types/node": "^10.12.10",
-    "@types/redis": "2.8.6",
+    "@types/redis": "^2.8.10",
     "@types/winston": "^2.4.4",
     "apollo-server": "^2.2.2",
     "apollo-server-express": "^2.2.2",
@@ -58,7 +58,7 @@
   "devDependencies": {
     "nodemon": "^1.18.6",
     "prettier": "^1.15.2",
-    "prettierrc": "^0.0.0-5",
+    "prettierrc": "0.0.0",
     "source-map-support": "^0.5.9"
   }
 }
