--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "@types/body-parser": "^1.17.0",
-    "@types/connect-redis": "0.0.10",
+    "@types/connect-redis": "^0.0.10",
     "@types/cors": "^2.8.5",
     "@types/dotenv": "^6.1.1",
     "@types/express-graphql": "^0.8.0",
