--- a/ui/package.json
+++ b/ui/package.json
@@ -10,44 +10,44 @@
   },
   "dependencies": {
     "@types/dotenv": "^6.1.1",
-    "@types/file-saver": "^2.0.0",
-    "@types/luxon": "^1.13.0",
+    "@types/file-saver": "^2.0.1",
+    "@types/luxon": "^1.15.2",
     "@types/pretty-bytes": "^5.1.0",
     "@types/uniqid": "^4.1.3",
     "@types/vue": "^2.0.0",
     "@types/webfontloader": "^1.6.29",
-    "apollo-boost": "^0.3.1",
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
-    "apollo-link": "^1.2.11",
-    "apollo-link-http": "^1.5.14",
-    "apollo-link-ws": "^1.0.17",
-    "apollo-utilities": "^1.2.1",
-    "axios": "^0.18.0",
+    "apollo-boost": "^0.4.3",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link": "^1.2.12",
+    "apollo-link-http": "^1.5.15",
+    "apollo-link-ws": "^1.0.18",
+    "apollo-utilities": "^1.3.2",
+    "axios": "^0.19.0",
     "bulma": "^0.7.5",
     "dotenv": "^8.0.0",
     "filesaver.js": "^1.3.4",
-    "graphql": "^14.3.0",
+    "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
-    "luxon": "^1.14.0",
+    "luxon": "^1.16.1",
     "pretty-bytes": "^5.2.0",
     "register-service-worker": "^1.6.2",
     "subscriptions-transport-ws": "^0.9.16",
     "uniqid": "^5.0.3",
     "vue": "^2.6.10",
-    "vue-apollo": "^3.0.0-beta.29",
+    "vue-apollo": "^3.0.0-rc.1",
     "vue-cookie": "^1.1.4",
     "vue-pose": "^0.5.1",
-    "vue-router": "^3.0.6",
+    "vue-router": "^3.0.7",
     "vuex": "^3.1.1",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.7.0",
-    "@vue/cli-plugin-eslint": "^3.7.0",
-    "@vue/cli-plugin-pwa": "^3.7.0",
-    "@vue/cli-plugin-unit-mocha": "^3.7.0",
-    "@vue/cli-service": "^3.7.0",
+    "@vue/cli-plugin-babel": "^3.9.2",
+    "@vue/cli-plugin-eslint": "^3.9.2",
+    "@vue/cli-plugin-pwa": "^3.9.0",
+    "@vue/cli-plugin-unit-mocha": "^3.9.0",
+    "@vue/cli-service": "^3.9.2",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/test-utils": "^1.0.0-beta.29",
     "chai": "^4.1.2",
