--- a/server/package.json
+++ b/server/package.json
@@ -6,48 +6,48 @@
   "author": "Prabhu Murthy",
   "license": "MIT",
   "dependencies": {
-    "@types/body-parser": "^1.17.0",
-    "@types/connect-redis": "^0.0.10",
-    "@types/cors": "^2.8.5",
-    "@types/dotenv": "^6.1.1",
-    "@types/express-graphql": "^0.8.0",
-    "@types/express-session": "^1.15.13",
+    "@types/body-parser": "^1.19.0",
+    "@types/connect-redis": "^0.0.14",
+    "@types/cors": "^2.8.6",
+    "@types/dotenv": "^8.2.0",
+    "@types/express-graphql": "^0.9.0",
+    "@types/express-session": "^1.17.0",
     "@types/graceful-fs": "^4.1.3",
-    "@types/graphql": "^14.2.2",
+    "@types/graphql": "^14.5.0",
     "@types/isomorphic-fetch": "^0.0.35",
-    "@types/morgan": "^1.7.35",
-    "@types/multer": "^1.3.7",
-    "@types/newrelic": "^4.11.0",
-    "@types/node": "^12.0.12",
-    "@types/redis": "^2.8.13",
+    "@types/morgan": "^1.9.0",
+    "@types/multer": "^1.4.3",
+    "@types/newrelic": "^6.4.0",
+    "@types/node": "^14.0.11",
+    "@types/redis": "^2.8.22",
     "@types/winston": "^2.4.4",
-    "apollo-server": "^2.6.7",
-    "apollo-server-express": "^2.6.7",
-    "axios": "^0.19.0",
+    "apollo-server": "^2.14.2",
+    "apollo-server-express": "^2.14.2",
+    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
-    "connect-redis": "^3.4.1",
+    "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
-    "dotenv": "^8.0.0",
-    "dropbox": "^4.0.28",
+    "dotenv": "^8.2.0",
+    "dropbox": "^4.0.30",
     "express": "^4.17.1",
-    "express-graphql": "^0.8.0",
-    "express-session": "^1.16.2",
-    "graceful-fs": "^4.2.0",
-    "graphql": "^14.4.2",
-    "graphql-tools": "^4.0.5",
+    "express-graphql": "^0.9.0",
+    "express-session": "^1.17.1",
+    "graceful-fs": "^4.2.4",
+    "graphql": "14",
+    "graphql-tools": "^6.0.7",
     "isomorphic-fetch": "^2.2.1",
-    "morgan": "^1.9.1",
-    "multer": "^1.4.0",
-    "mysql": "^2.17.1",
-    "newrelic": "^5.10.0",
-    "npm": "^6.10.0",
-    "pm2": "^3.5.1",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "mysql": "^2.18.1",
+    "newrelic": "^6.8.0",
+    "npm": "^6.14.5",
+    "pm2": "^4.4.0",
     "progress-stream": "^2.0.0",
-    "redis": "^2.8.0",
+    "redis": "^3.0.2",
     "reflect-metadata": "^0.1.12",
     "subscriptions-transport-ws": "^0.9.16",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.2",
+    "ts-node": "^8.10.2",
+    "typescript": "^3.9.5",
     "winston": "^3.2.1"
   },
   "scripts": {
@@ -56,9 +56,9 @@
     "postinstall": "mkdir uploads"
   },
   "devDependencies": {
-    "nodemon": "^1.19.1",
-    "prettier": "^1.18.2",
+    "nodemon": "^2.0.4",
+    "prettier": "^2.0.5",
     "prettierrc": "0.0.0",
-    "source-map-support": "^0.5.12"
+    "source-map-support": "^0.5.19"
   }
 }
