--- a/ui/package.json
+++ b/ui/package.json
@@ -5,56 +5,60 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@types/dotenv": "^6.1.1",
+    "@types/dotenv": "^8.2.0",
     "@types/file-saver": "^2.0.1",
-    "@types/luxon": "^1.15.2",
-    "@types/pretty-bytes": "^5.1.0",
-    "@types/uniqid": "^4.1.3",
+    "@types/luxon": "^1.24.0",
+    "@types/pretty-bytes": "^5.2.0",
+    "@types/uniqid": "^5.2.0",
     "@types/vue": "^2.0.0",
-    "@types/webfontloader": "^1.6.29",
-    "apollo-boost": "^0.4.3",
-    "apollo-cache-inmemory": "^1.6.2",
-    "apollo-client": "^2.6.3",
-    "apollo-link": "^1.2.12",
-    "apollo-link-http": "^1.5.15",
-    "apollo-link-ws": "^1.0.18",
-    "apollo-utilities": "^1.3.2",
-    "axios": "^0.19.0",
-    "bulma": "^0.7.5",
-    "dotenv": "^8.0.0",
+    "@types/webfontloader": "^1.6.32",
+    "apollo-boost": "^0.4.9",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
+    "apollo-link-ws": "^1.0.20",
+    "apollo-utilities": "^1.3.4",
+    "axios": "^0.19.2",
+    "bulma": "^0.8.2",
+    "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "filesaver.js": "^1.3.4",
-    "graphql": "^14.4.2",
-    "graphql-tag": "^2.10.1",
-    "luxon": "^1.16.1",
-    "pretty-bytes": "^5.2.0",
-    "register-service-worker": "^1.6.2",
+    "graphql": "^15.0.0",
+    "graphql-tag": "^2.10.3",
+    "luxon": "^1.24.1",
+    "pretty-bytes": "^5.3.0",
+    "register-service-worker": "^1.7.1",
     "subscriptions-transport-ws": "^0.9.16",
-    "uniqid": "^5.0.3",
-    "vue": "^2.6.10",
-    "vue-apollo": "^3.0.0-rc.1",
+    "uniqid": "^5.2.0",
+    "vue": "^2.6.11",
+    "vue-apollo": "^3.0.3",
     "vue-cookie": "^1.1.4",
     "vue-pose": "^0.5.1",
-    "vue-router": "^3.0.7",
-    "vuex": "^3.1.1",
+    "vue-router": "^3.3.2",
+    "vuex": "^3.4.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.2",
-    "@vue/cli-plugin-eslint": "^3.9.2",
-    "@vue/cli-plugin-pwa": "^3.9.0",
-    "@vue/cli-plugin-unit-mocha": "^3.9.0",
-    "@vue/cli-service": "^3.9.2",
-    "@vue/eslint-config-prettier": "^4.0.1",
-    "@vue/test-utils": "^1.0.0-beta.29",
+    "@vue/cli-plugin-babel": "^4.4.1",
+    "@vue/cli-plugin-eslint": "^4.4.1",
+    "@vue/cli-plugin-pwa": "^4.4.1",
+    "@vue/cli-plugin-unit-mocha": "^4.4.1",
+    "@vue/cli-service": "^4.4.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/test-utils": "^1.0.3",
+    "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
+    "eslint": "^7.1.0",
+    "eslint-plugin-vue": "^6.2.2",
     "hard-source-webpack-plugin": "^0.13.1",
-    "node-sass": "^4.12.0",
-    "sass-loader": "^7.0.1",
-    "vue-template-compiler": "^2.6.10",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^8.0.2",
+    "vue-template-compiler": "^2.6.11",
     "webpack-graphql-loader": "^1.0.2"
   }
 }
