--- a/ui/package.json
+++ b/ui/package.json
@@ -28,7 +28,7 @@
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
     "filesaver.js": "^1.3.4",
-    "graphql": "^15.0.0",
+    "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
     "luxon": "^1.24.1",
     "pretty-bytes": "^5.3.0",
@@ -40,24 +40,27 @@
     "vue-cookie": "^1.1.4",
     "vue-feather-icons": "^5.0.0",
     "vue-pose": "^0.5.1",
-    "vue-router": "^3.3.2",
+    "vue-router": "^3.3.4",
     "vuex": "^3.4.0",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.4.1",
-    "@vue/cli-plugin-eslint": "^4.4.1",
-    "@vue/cli-plugin-pwa": "^4.4.1",
-    "@vue/cli-plugin-unit-mocha": "^4.4.1",
-    "@vue/cli-service": "^4.4.1",
+    "@types/vue-feather-icons": "^5.0.0",
+    "@vue/cli-plugin-babel": "^4.4.4",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-plugin-pwa": "^4.4.4",
+    "@vue/cli-plugin-unit-mocha": "^4.4.4",
+    "@vue/cli-service": "^4.4.4",
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
     "eslint": "^7.2.0",
+    "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-vue": "^6.2.2",
     "hard-source-webpack-plugin": "^0.13.1",
     "node-sass": "^4.14.1",
+    "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11",
     "webpack-graphql-loader": "^1.0.2"
