--- a/ui/package.json
+++ b/ui/package.json
@@ -33,6 +33,8 @@
     "luxon": "^1.24.1",
     "pretty-bytes": "^5.3.0",
     "register-service-worker": "^1.7.1",
+    "stylelint": "^13.6.0",
+    "stylelint-config-standard": "^20.0.0",
     "subscriptions-transport-ws": "^0.9.16",
     "uniqid": "^5.2.0",
     "vue": "^2.6.11",
@@ -62,6 +64,7 @@
     "node-sass": "^4.14.1",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
+    "stylelint-config-sass-guidelines": "^7.0.0",
     "vue-template-compiler": "^2.6.11",
     "webpack-graphql-loader": "^1.0.2"
   }
