--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
   "cSpell.words": [
     "active",
+    "backdrop",
+    "dropzone",
+    "dropzone backdrop icon",
     "enter",
+    "icon",
     "movein",
     "movein enter active",
     "popdown",
