--- a/server/package.json
+++ b/server/package.json
@@ -15,31 +15,32 @@
     "@types/graceful-fs": "^4.1.3",
     "@types/graphql": "^14.5.0",
     "@types/isomorphic-fetch": "^0.0.35",
-    "@types/morgan": "^1.9.0",
+    "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
     "@types/newrelic": "^6.4.0",
-    "@types/node": "^14.0.11",
+    "@types/node": "^14.0.13",
     "@types/redis": "^2.8.22",
     "@types/winston": "^2.4.4",
-    "apollo-server": "^2.14.2",
-    "apollo-server-express": "^2.14.2",
+    "agenda": "^3.1.0",
+    "apollo-server": "^2.15.0",
+    "apollo-server-express": "^2.15.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "dropbox": "^4.0.30",
+    "dropbox": "^5.1.0",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.1",
     "graceful-fs": "^4.2.4",
     "graphql": "14",
-    "graphql-tools": "^6.0.8",
+    "graphql-tools": "^6.0.10",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "newrelic": "^6.8.0",
+    "newrelic": "^6.9.0",
     "npm": "^6.14.5",
     "pm2": "^4.4.0",
     "progress-stream": "^2.0.0",
@@ -56,9 +57,12 @@
     "postinstall": "mkdir uploads"
   },
   "devDependencies": {
+    "@types/agenda": "^2.0.8",
+    "eslint": "^7.2.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-import-resolver-node": "^0.3.4",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
-    "prettierrc": "0.0.0",
     "source-map-support": "^0.5.19"
   }
 }
