--- a/server/package.json
+++ b/server/package.json
@@ -46,6 +46,7 @@
     "progress-stream": "^2.0.0",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.12",
+    "scramjet": "^4.30.2",
     "subscriptions-transport-ws": "^0.9.16",
     "ts-node": "^8.10.2",
     "typescript": "^3.9.5",
@@ -58,9 +59,15 @@
   },
   "devDependencies": {
     "@types/agenda": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "eslint": "^7.2.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-import-resolver-node": "^0.3.4",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "source-map-support": "^0.5.19"
