--- a/ui/package.json
+++ b/ui/package.json
@@ -48,6 +48,8 @@
   },
   "devDependencies": {
     "@types/vue-feather-icons": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.3.0",
     "@vue/cli-plugin-babel": "^4.4.4",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-pwa": "^4.4.4",
@@ -65,6 +67,7 @@
     "prettier": "^2.0.5",
     "sass-loader": "^8.0.2",
     "stylelint-config-sass-guidelines": "^7.0.0",
+    "typescript": "^3.9.5",
     "vue-template-compiler": "^2.6.11",
     "webpack-graphql-loader": "^1.0.2"
   }
