--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,7 @@
     "filesaver.js": "^1.3.4",
     "graphql": "^15.1.0",
     "graphql-tag": "^2.10.3",
+    "loadash": "^1.0.0",
     "luxon": "^1.24.1",
     "pretty-bytes": "^5.3.0",
     "register-service-worker": "^1.7.1",
@@ -47,9 +48,8 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.155",
     "@types/vue-feather-icons": "^5.0.0",
-    "@typescript-eslint/eslint-plugin": "^3.3.0",
-    "@typescript-eslint/parser": "^3.3.0",
     "@vue/cli-plugin-babel": "^4.4.4",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-pwa": "^4.4.4",
