--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,8 @@
     "dropzone",
     "dropzone backdrop icon",
     "enter",
+    "failure",
+    "failure occured",
     "filesaver",
     "filesaver js",
     "icon",
@@ -16,6 +18,7 @@
     "js",
     "movein",
     "movein enter active",
+    "occured",
     "popdown",
     "popdown wrapper",
     "standard",
