adding basic typescript support

--- a/ui/package.json
+++ b/ui/package.json
@@ -48,14 +48,20 @@
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.11",
     "@types/lodash": "^4.14.157",
+    "@types/mocha": "^5.2.4",
     "@types/vue-feather-icons": "^5.0.0",
+    "@typescript-eslint/eslint-plugin": "^2.33.0",
+    "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "^4.4.6",
     "@vue/cli-plugin-eslint": "~4.4.6",
     "@vue/cli-plugin-pwa": "^4.4.6",
+    "@vue/cli-plugin-typescript": "~4.4.0",
     "@vue/cli-plugin-unit-mocha": "^4.4.6",
     "@vue/cli-service": "^4.4.6",
     "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-typescript": "^5.0.2",
     "@vue/test-utils": "^1.0.3",
     "babel-eslint": "^10.1.0",
     "chai": "^4.1.2",
