typescript upgrade complete with warnings

--- a/ui/package.json
+++ b/ui/package.json
@@ -40,14 +40,19 @@
     "uniqid": "^5.2.0",
     "vue": "^2.6.11",
     "vue-apollo": "^3.0.3",
+    "vue-class-component": "^7.2.3",
     "vue-cookie": "^1.1.4",
     "vue-feather-icons": "^5.0.0",
     "vue-pose": "^0.5.1",
+    "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.3.4",
     "vuex": "^3.4.0",
+    "vuex-class": "^0.3.2",
     "webfontloader": "^1.6.28"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/plugin-proposal-decorators": "^7.10.3",
     "@types/chai": "^4.2.11",
     "@types/lodash": "^4.14.157",
     "@types/mocha": "^5.2.4",
