--- a/ui/tsconfig.json
+++ b/ui/tsconfig.json
@@ -11,6 +11,9 @@
     "sourceMap": true,
     "baseUrl": ".",
     "skipLibCheck": true,
+    "noImplicitAny": false,
+    "experimentalDecorators": true,
+    "strictPropertyInitialization": false,
     "types": [
       "webpack-env",
       "mocha",
