--- a/ui/.env.production
+++ b/ui/.env.production
@@ -1,5 +1,5 @@
-VUE_APP_API_SERVER= http://localhost:4000
+VUE_APP_API_SERVER= https://boxdapi.prabhumurthy.com
 
-VUE_APP_WS_API_SERVER= ws://localhost:4000
+VUE_APP_WS_API_SERVER= ws://boxdapi.prabhumurthy.com
 
-VUE_APP_UI_URL= http://localhost:8080
+VUE_APP_UI_URL= https://boxd.prabhumurthy.com
