--- a/server/package.json
+++ b/server/package.json
@@ -44,6 +44,7 @@
     "npm": "^6.14.5",
     "pm2": "^4.4.0",
     "progress-stream": "^2.0.0",
+    "pusher": "^3.0.1",
     "redis": "^3.0.2",
     "reflect-metadata": "^0.1.12",
     "scramjet": "^4.30.2",
