--- a/ui/package.json
+++ b/ui/package.json
@@ -13,6 +13,7 @@
     "@types/file-saver": "^2.0.1",
     "@types/luxon": "^1.24.1",
     "@types/pretty-bytes": "^5.2.0",
+    "@types/pusher-js": "^4.2.2",
     "@types/uniqid": "^5.2.0",
     "@types/vue": "^2.0.0",
     "@types/webfontloader": "^1.6.32",
@@ -30,9 +31,9 @@
     "filesaver.js": "^1.3.4",
     "graphql": "^15.2.0",
     "graphql-tag": "^2.10.3",
-    "loadash": "^1.0.0",
     "luxon": "^1.24.1",
     "pretty-bytes": "^5.3.0",
+    "pusher-js": "^6.0.3",
     "register-service-worker": "^1.7.1",
     "stylelint": "^13.6.1",
     "stylelint-config-standard": "^20.0.0",
