--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
     "apollo-server-express": "^2.15.1",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.12.2",
     "connect-redis": "^4.0.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
@@ -34,7 +35,7 @@
     "express-graphql": "^0.9.0",
     "express-session": "^1.17.1",
     "graceful-fs": "^4.2.4",
-    "graphql": "14",
+    "graphql": "^14.7.0",
     "graphql-tools": "^6.0.12",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.10.0",
@@ -46,17 +47,18 @@
     "progress-stream": "^2.0.0",
     "pusher": "^3.0.1",
     "redis": "^3.0.2",
-    "reflect-metadata": "^0.1.12",
+    "reflect-metadata": "^0.1.13",
     "scramjet": "^4.30.2",
     "subscriptions-transport-ws": "^0.9.16",
     "ts-node": "^8.10.2",
+    "type-graphql": "^1.0.0-rc.3",
     "typescript": "^3.9.6",
     "winston": "^3.3.3"
   },
   "scripts": {
     "dev": "nodemon ./src/index.ts",
     "start": "ts-node ./src/index.ts",
-    "postinstall": "mkdir -p uploads"
+    "postinstall": "mkdir uploads"
   },
   "devDependencies": {
     "@types/agenda": "^2.0.8",
