--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,6 @@
     "@types/connect-redis": "^0.0.14",
     "@types/cors": "^2.8.6",
     "@types/dotenv": "^8.2.0",
-    "@types/express-graphql": "^0.9.0",
     "@types/express-session": "^1.17.0",
     "@types/graceful-fs": "^4.1.3",
     "@types/graphql": "^14.5.0",
@@ -18,12 +17,11 @@
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
     "@types/newrelic": "^6.4.0",
-    "@types/node": "^14.0.14",
+    "@types/node": "^14.0.18",
     "@types/redis": "^2.8.24",
     "@types/winston": "^2.4.4",
     "agenda": "^3.1.0",
-    "apollo-server": "^2.15.1",
-    "apollo-server-express": "^2.15.1",
+    "apollo-server-fastify": "2.15.0",
     "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "class-validator": "^0.12.2",
@@ -31,16 +29,20 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "dropbox": "^5.2.0",
-    "express": "^4.17.1",
-    "express-graphql": "^0.9.0",
-    "express-session": "^1.17.1",
+    "fastify": "^2.15.1",
+    "fastify-compress": "^2.0.1",
+    "fastify-cookie": "^3.6.1",
+    "fastify-cors": "^3.0.3",
+    "fastify-helmet": "^3.0.2",
+    "fastify-multer": "^1.5.4",
+    "fastify-session": "^4.0.1",
     "graceful-fs": "^4.2.4",
-    "graphql": "^14.7.0",
-    "graphql-tools": "^6.0.12",
+    "graphql": "15.1.0",
     "isomorphic-fetch": "^2.2.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
+    "nanoid": "^3.1.10",
     "newrelic": "^6.10.0",
     "npm": "^6.14.5",
     "pm2": "^4.4.0",
@@ -62,9 +64,10 @@
   },
   "devDependencies": {
     "@types/agenda": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^3.5.0",
-    "@typescript-eslint/parser": "^3.5.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
     "eslint": "^7.4.0",
+    "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-import-resolver-node": "^0.3.4",
     "eslint-plugin-import": "^2.22.0",
