--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "@types/multer": "^1.4.3",
     "@types/newrelic": "^6.4.0",
     "@types/node": "^14.0.18",
+    "@types/progress-stream": "^2.0.0",
     "@types/redis": "^2.8.24",
     "@types/winston": "^2.4.4",
     "agenda": "^3.1.0",
