--- a/server/package.json
+++ b/server/package.json
@@ -40,7 +40,9 @@
     "graceful-fs": "^4.2.4",
     "graphql": "15.3.0",
     "isomorphic-fetch": "^2.2.1",
+    "mongodb": "^3.5.9",
     "morgan": "^1.10.0",
+    "mquery": "^3.2.2",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.10",
