--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,9 @@
       "type": "chrome",
       "request": "launch",
       "name": "Launch Chrome",
-      "url": "http://localhost:8080",
-      "webRoot": "${workspaceFolder}/client/src",
+      "url": "http://localhost:8080/",
+      "webRoot": "${workspaceFolder}/ui",
+      "port": 8080,
       "breakOnLoad": true,
       "sourceMapPathOverrides": {
         "webpack:///src/*": "${webRoot}/*"
@@ -29,14 +30,16 @@
       ],
     },
     {
-      "type": "node",
-      "request": "attach",
-      "name": "Heroku",
-      "address": "localhost",
-      "port": 9229,
-      "protocol": "inspector",
-      "localRoot": "${workspaceFolder}/server/",
-      "remoteRoot": "/app"
+      "type": "edge",
+      "request": "launch",
+      "version": "stable",
+      "name": "Launch edge against localhost",
+      "url": "http://localhost:8080",
+      "port": 8080,
+      "webRoot": "${workspaceFolder}/ui",
+      "sourceMapPathOverrides": {
+        "webpack:///src/*": "${webRoot}/*"
+      }
     }
   ]
 }
