--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,9 @@
   "main": "app.ts",
   "author": "Prabhu Murthy",
   "license": "MIT",
+  "config": {
+    "msvs_version": 2019
+  },
   "dependencies": {
     "@types/body-parser": "^1.19.0",
     "@types/connect-redis": "^0.0.14",
@@ -17,7 +20,7 @@
     "@types/morgan": "^1.9.1",
     "@types/multer": "^1.4.3",
     "@types/newrelic": "^6.4.0",
-    "@types/node": "^14.0.22",
+    "@types/node": "^14.0.23",
     "@types/progress-stream": "^2.0.0",
     "@types/redis": "^2.8.25",
     "@types/winston": "^2.4.4",
@@ -54,7 +57,7 @@
     "subscriptions-transport-ws": "^0.9.16",
     "ts-node": "^8.10.2",
     "type-graphql": "^1.0.0-rc.3",
-    "typescript": "^3.9.6",
+    "typescript": "^3.9.7",
     "winston": "^3.3.3"
   },
   "scripts": {
@@ -63,10 +66,10 @@
     "postinstall": "mkdir uploads"
   },
   "devDependencies": {
-    "@types/agenda": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
-    "eslint": "^7.4.0",
+    "@types/agenda": "^2.0.9",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
     "eslint-import-resolver-node": "^0.3.4",
